--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -16,8 +16,8 @@
 .nav-bar {
     min-height: 10vh;
     height: 100%;
-    width: 100vh;
-    min-width: 100%;
+    min-width: 100vh;
+    width: 100%;
     background-color: #5474FD;
     display: flex;
     justify-content: center;
